--- a/MECApp/src/app/app.component.html
+++ b/MECApp/src/app/app.component.html
@@ -16,3 +16,26 @@
 <md-slider min="1" max="5" step="0.5" value="1.5"></md-slider>
 <md-slide-toggle></md-slide-toggle>
 <!--test material-->
+
+<!--test ngx-bootstrap-->
+<alert type="success">hello</alert>
+<p>
+  <button type="button" class="btn btn-lg btn-default">default</button>
+  <button type="button" class="btn btn-lg btn-primary">primary</button>
+  <button type="button" class="btn btn-lg btn-success">success</button>
+  <button type="button" class="btn btn-lg btn-info">info</button>
+  <button type="button" class="btn btn-lg btn-warning">warning</button>
+  <button type="button" class="btn btn-lg btn-danger">danger</button>
+  <button type="button" class="btn btn-lg btn-link">link</button>
+</p>
+<!--test ngx-bootstrap-->
+
+<!--test echarts-->
+<div id="main" style="height: 700px;width: 500px"></div>
+<!--test echarts-->
+
+<!--test fontawesome-->
+<div style="height: 17px;width: 15px">
+  <i class="fa fa-american-sign-language-interpreting fa-5x" aria-hidden="true"> </i>
+</div>
+<!--test fontawesome-->
