--- a/MECApp/src/app/app.component.html
+++ b/MECApp/src/app/app.component.html
@@ -39,3 +39,7 @@
   <i class="fa fa-american-sign-language-interpreting fa-5x" aria-hidden="true"> </i>
 </div>
 <!--test fontawesome-->
+
+<!--test jquery-->
+<div id="jq" style="height: 20px;width: 20px;margin-top: 10px"></div>
+<!--test jquery-->
