--- a/MECApp/src/app/app.component.html
+++ b/MECApp/src/app/app.component.html
@@ -43,3 +43,9 @@
 <!--test jquery-->
 <div id="jq" style="height: 90px;width: 90px;margin-top: 50px"></div>
 <!--test jquery-->
+
+<!--test jquery-->
+<div id="jq" style="height: 90px;width: 90px;margin-top: 50px"></div>
+<!--test jquery-->
+
+
