import some modules

--- a/MECApp/src/app/app.component.html
+++ b/MECApp/src/app/app.component.html
@@ -28,6 +28,17 @@
   <button type="button" class="btn btn-lg btn-danger">danger</button>
   <button type="button" class="btn btn-lg btn-link">link</button>
 </p>
+<carousel>
+  <slide>
+    <img src="assets/imgs/angular.svg" alt="First slide">
+  </slide>
+  <slide>
+    <img src="assets/imgs/angular.svg" alt="Second slide">
+  </slide>
+  <slide>
+    <img src="assets/imgs/angular.svg" alt="Third slide">
+  </slide>
+</carousel>
 <!--test ngx-bootstrap-->
 
 <!--test echarts-->
