change route to  lazyload

--- a/MECApp/src/app/homepage/homepage.component.html
+++ b/MECApp/src/app/homepage/homepage.component.html
@@ -1,3 +1,52 @@
+<!--test material-->
+<md-tab-group>
+  <md-tab label="One">
+  </md-tab>
+  <md-tab label="Two">
+  </md-tab>
+</md-tab-group>
+<md-radio-group>
+  <md-radio-button value="1">Option 1</md-radio-button>
+  <md-radio-button value="2">Option 2</md-radio-button>
+</md-radio-group>
+<md-slider min="1" max="5" step="0.5" value="1.5"></md-slider>
+<md-slide-toggle></md-slide-toggle>
+<!--test material-->
+
+<!--test ngx-bootstrap-->
+<alert type="success">hello</alert>
 <p>
-  homepage works!
+  <button type="button" class="btn btn-lg btn-default">default</button>
+  <button type="button" class="btn btn-lg btn-primary">primary</button>
+  <button type="button" class="btn btn-lg btn-success">success</button>
+  <button type="button" class="btn btn-lg btn-info">info</button>
+  <button type="button" class="btn btn-lg btn-warning">warning</button>
+  <button type="button" class="btn btn-lg btn-danger">danger</button>
+  <button type="button" class="btn btn-lg btn-link">link</button>
 </p>
+<carousel>
+  <slide>
+    <img src="assets/imgs/angular.svg" alt="First slide">
+  </slide>
+  <slide>
+    <img src="assets/imgs/angular.svg" alt="Second slide">
+  </slide>
+  <slide>
+    <img src="assets/imgs/angular.svg" alt="Third slide">
+  </slide>
+</carousel>
+<!--test ngx-bootstrap-->
+
+<!--test echarts-->
+<div id="main" style="height: 700px;width: 500px"></div>
+<!--test echarts-->
+
+<!--test fontawesome-->
+<div style="height: 17px;width: 15px">
+  <i class="fa fa-american-sign-language-interpreting fa-5x" aria-hidden="true"> </i>
+</div>
+<!--test fontawesome-->
+
+<!--test jquery-->
+<div id="jq" style="height: 90px;width: 90px;margin-top: 50px"></div>
+<!--test jquery-->
