route bug fixed

--- a/MECApp/src/app/homepage/homepage.component.html
+++ b/MECApp/src/app/homepage/homepage.component.html
@@ -48,5 +48,5 @@
 <!--test fontawesome-->
 
 <!--test jquery-->
-<div id="jq" style="height: 90px;width: 90px;margin-top: 50px"></div>
+<div id="jq" style="height: 90px;width: 90px;margin-top: 50px">jQuery work</div>
 <!--test jquery-->
