--- a/MECApp/src/app/app.component.html
+++ b/MECApp/src/app/app.component.html
@@ -24,3 +24,13 @@
 <div class="container main-container">
   <router-outlet></router-outlet>
 </div>
+
+<footer class="footer bs-footer bg-primary">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-3">
+        Powered by <a href="https://github.com/tc9011/Angular-cli-starter" target="_blank">tc9011</a>
+      </div>
+    </div>
+  </div>
+</footer>
