move inline css to .scss file

--- a/App/src/app/homepage/homepage.component.html
+++ b/App/src/app/homepage/homepage.component.html
@@ -39,15 +39,15 @@
 <!--test ngx-bootstrap-->
 
 <!--test echarts-->
-<div id="main" style="height: 700px;width: 500px"></div>
+<div id="main"></div>
 <!--test echarts-->
 
 <!--test fontawesome-->
-<div style="height: 17px;width: 15px">
+<div class="fontawesome">
   <i class="fa fa-american-sign-language-interpreting fa-5x" aria-hidden="true"> </i>
 </div>
 <!--test fontawesome-->
 
 <!--test jquery-->
-<div id="jq" style="height: 90px;width: 90px;margin-top: 50px">jQuery work</div>
+<div id="jq">jQuery works</div>
 <!--test jquery-->
