add about component and move bootstrap-table to about page

--- a/App/src/app/app.component.html
+++ b/App/src/app/app.component.html
@@ -13,8 +13,7 @@
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li routerLinkActive="active"><a routerLink="homepage">home</a></li>
-        <li><a routerLink="/homepage">about</a></li>
-        <li><a routerLink="/homepage">contact</a></li>
+        <li routerLinkActive="active"><a routerLink="about">about</a></li>
       </ul>
     </div><!--nav-collapse-->
   </nav>
