change footer style

--- a/App/src/app/app.component.html
+++ b/App/src/app/app.component.html
@@ -28,7 +28,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-3">
-        Powered by <a href="https://github.com/tc9011/Angular-cli-starter" target="_blank">tc9011</a>
+        <span>Powered by</span><a href="https://github.com/tc9011/Angular-cli-starter" target="_blank">tc9011</a>
       </div>
     </div>
   </div>
