rewrite home page

--- a/App/src/app/app.component.scss
+++ b/App/src/app/app.component.scss
@@ -12,3 +12,13 @@ $footer-font-color-common: #00abff;
     color: $footer-font-color-common;
   }
 }
+
+.navbar{
+  margin: 0;
+}
+
+.power-by{
+  text-align: center;
+  margin: 20px auto;
+  width: 450px;
+}
