--- a/App/src/app/app.component.html
+++ b/App/src/app/app.component.html
@@ -19,15 +19,12 @@
   </nav>
 </header>
 
-<!--<a routerLink="home">active</a>-->
-<div class="container main-container">
-  <router-outlet></router-outlet>
-</div>
+<router-outlet></router-outlet>
 
 <footer class="footer bs-footer bg-primary">
   <div class="container">
     <div class="row">
-      <div class="col-lg-3">
+      <div class="col-lg-3 power-by">
         <span>Powered by</span><a href="https://github.com/tc9011/Angular-cli-starter" target="_blank">tc9011</a>
       </div>
     </div>
