--- a/App/src/app/homepage/homepage.component.scss
+++ b/App/src/app/homepage/homepage.component.scss
@@ -1,15 +1,51 @@
+$common-width: 450px;
+
 #main {
   height: 700px;
-  width: 500px
+  width: 100%
 }
 
 .fontawesome {
   height: 17px;
-  width: 15px
+  width: 450px;
+  margin: 30px auto;
+  margin-bottom: 100px;
 }
 
 #jq {
   height: 90px;
-  width: 90px;
-  margin-top: 50px
+  width: $common-width;
+  margin: 50px auto;
+  text-align: center;
+}
+
+.bg-img{
+  width: 100%;
+  height: 800px;
+  background: url("../../assets/imgs/5.jpg") no-repeat center;
+  background-size: cover;
+}
+
+.button-group{
+  margin: 30px auto;
+  width: 700px;
+}
+
+.example-card{
+  width: $common-width;
+  height: 500px;
+  margin: 10px auto;
+}
+
+.md-input{
+  width: $common-width;
+  margin: 30px auto;
+}
+
+#moment{
+  background: #00abff;
+  width: $common-width;
+  height: 50px;
+  margin: 50px auto;
+  text-align: center;
 }
