build(npm):ad ng-zorro-antd

--- a/App/src/app/homepage/homepage.component.html
+++ b/App/src/app/homepage/homepage.component.html
@@ -36,6 +36,11 @@
   </md-input-container>
 </p>
 
+<!--ng-zorro-antd-->
+<p class="antd">antd组件：</p>
+<nz-input-number class="antd" [(ngModel)]="demoValue" [nzMin]="1" [nzMax]="10" [nzStep]="1"></nz-input-number>
+<!--ng-zorro-antd-->
+
 <!--animation example-->
 <button md-button class="animation-button" (click)="toggleState()">active animation</button>
 
