--- a/App/src/app/homepage/homepage.component.scss
+++ b/App/src/app/homepage/homepage.component.scss
@@ -62,6 +62,8 @@ $common-width: 450px;
   color: white;
 }
 
-.animation-button ~ p{
-
+.antd{
+  display: block;
+  width: 200px;
+  margin: 20px auto;
 }
