--- a/App/src/app/app.component.html
+++ b/App/src/app/app.component.html
@@ -13,7 +13,7 @@
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li routerLinkActive="active"><a routerLink="homepage">home</a></li>
-        <li routerLinkActive="active"><a routerLink="about">about</a></li>
+        <li routerLinkActive="active"><a routerLink="about" (click)="postData()">about</a></li>
       </ul>
     </div><!--nav-collapse-->
   </nav>
