build(app):update to angular5

--- a/App/src/app/homepage/homepage.component.html
+++ b/App/src/app/homepage/homepage.component.html
@@ -10,30 +10,29 @@
   <button type="button" class="btn btn-lg btn-link">link</button>
 </div>
 
-<md-card class="example-card">
-  <md-card-header>
-    <div md-card-avatar class="example-header-image"></div>
-    <md-card-title>Shiba Inu</md-card-title>
-    <md-card-subtitle>Dog Breed</md-card-subtitle>
-  </md-card-header>
-  <img md-card-image src="./assets/imgs/6.jpg">
-  <md-card-content>
+<Mat-card class="example-card">
+  <div Mat-card-avatar class="example-header-image"></div>
+  <Mat-card-title>Shiba Inu</Mat-card-title>
+  <Mat-card-subtitle>Dog Breed</Mat-card-subtitle>
+
+  <img Mat-card-image src="./assets/imgs/6.jpg" alt="Photo of a Shiba Inu">
+  <Mat-card-content>
     <p>
       The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
       A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
       bred for hunting.
     </p>
-  </md-card-content>
-  <md-card-actions>
-    <button md-button>LIKE</button>
-    <button md-button>SHARE</button>
-  </md-card-actions>
-</md-card>
+  </Mat-card-content>
+  <Mat-card-actions>
+    <button Mat-button>LIKE</button>
+    <button Mat-button>SHARE</button>
+  </Mat-card-actions>
+</Mat-card>
 
-<p class="md-input">
-  <md-input-container class="example-full-width">
-    <textarea mdInput placeholder="Address 2"></textarea>
-  </md-input-container>
+<p class="Mat-input">
+  <Mat-input-container class="example-full-width">
+    <textarea MatInput placeholder="Address 2"></textarea>
+  </Mat-input-container>
 </p>
 
 <!--ng-zorro-antd-->
@@ -42,7 +41,7 @@
 <!--ng-zorro-antd-->
 
 <!--animation example-->
-<button md-button class="animation-button" (click)="toggleState()">active animation</button>
+<button Mat-button class="animation-button" (click)="toggleState()">active animation</button>
 
 <p [@flyIn]="animation" [@fadeIn]="animation">I'm animation</p>
 <!--animation example-->
