--- a/App/src/app/homepage/homepage.component.html
+++ b/App/src/app/homepage/homepage.component.html
@@ -1,7 +1,7 @@
 <div role="img" class="bg-img"></div>
 
 <div class="button-group">
-  <button type="button" class="btn btn-lg btn-default">default</button>
+  <button type="button" class="btn btn-lg btn-default" (click)="postData()">default</button>
   <button type="button" class="btn btn-lg btn-primary">primary</button>
   <button type="button" class="btn btn-lg btn-success">success</button>
   <button type="button" class="btn btn-lg btn-info">info</button>
