--- a/App/src/app/shared/component/navbar/navbar.component.html
+++ b/App/src/app/shared/component/navbar/navbar.component.html
@@ -8,13 +8,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">projectname</a>
+      <a class="navbar-brand" href="#">{{'nav.projectname' | translate}}</a>
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li routerLinkActive="active"><a routerLink="homepage">home</a></li>
-        <li routerLinkActive="active"><a routerLink="about">about</a></li>
+        <li routerLinkActive="active"><a routerLink="homepage">{{'nav.home' | translate}}</a></li>
+        <li routerLinkActive="active"><a routerLink="about">{{'nav.about' | translate}}</a></li>
       </ul>
+      <button type="button" class="language-button" mat-button (click)="useChinese()">中文</button>
+      <button type="button" class="language-button" mat-button (click)="useEnglish()">English</button>
     </div><!--nav-collapse-->
   </nav>
 </header>
