feat(sidebar):add sidebar component

--- a/App/src/app/about/about.component.html
+++ b/App/src/app/about/about.component.html
@@ -1,3 +1,7 @@
 <section>
   <table id="table"></table>
 </section>
+
+<div class="sidebar">
+  <app-sidebar [data]="menuData"></app-sidebar>
+</div>
