feat(about):add table translate demo

--- a/App/src/app/shared/component/navbar/navbar.component.html
+++ b/App/src/app/shared/component/navbar/navbar.component.html
@@ -12,8 +12,8 @@
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li routerLinkActive="active"><a routerLink="homepage">{{'nav.home' | translate}}</a></li>
-        <li routerLinkActive="active"><a routerLink="about">{{'nav.about' | translate}}</a></li>
+        <li routerLinkActive="active"><a routerLink="/homepage">{{'nav.home' | translate}}</a></li>
+        <li routerLinkActive="active"><a routerLink="/about">{{'nav.about' | translate}}</a></li>
       </ul>
       <button type="button" class="language-button" mat-button (click)="useChinese()">中文</button>
       <button type="button" class="language-button" mat-button (click)="useEnglish()">English</button>
