--- a/App/src/app/shared/component/navbar/navbar.component.html
+++ b/App/src/app/shared/component/navbar/navbar.component.html
@@ -17,6 +17,7 @@
       </ul>
       <button type="button" class="language-button" mat-button (click)="useChinese()">中文</button>
       <button type="button" class="language-button" mat-button (click)="useEnglish()">English</button>
+      <button type="button" class="language-button" mat-button (click)="useNotification()">kuamokuaitongxingceshi</button>
     </div><!--nav-collapse-->
   </nav>
 </header>
