--- a/App/src/app/views/homepage/homepage.component.scss
+++ b/App/src/app/views/homepage/homepage.component.scss
@@ -22,7 +22,7 @@ $common-width: 450px;
 .bg-img{
   width: 100%;
   height: 800px;
-  background: url("../../assets/imgs/5.jpg") no-repeat center;
+  background: url("../../../assets/imgs/5.jpg") no-repeat center;
   background-size: cover;
 }
 
