--- a/App/src/app/layout/navbar/navbar.component.html
+++ b/App/src/app/layout/navbar/navbar.component.html
@@ -1,23 +1,11 @@
-<header class="navbar navbar-default">
-  <nav class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-              data-target=".navbar-collapse">
-        <span class="sr-only">toggle nav</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">{{'nav.projectname' | translate}}</a>
-    </div>
-    <div class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
-        <li routerLinkActive="active"><a routerLink="/homepage">{{'nav.home' | translate}}</a></li>
-        <li routerLinkActive="active"><a routerLink="/about">{{'nav.about' | translate}}</a></li>
-      </ul>
-      <button type="button" class="language-button" mat-button (click)="useChinese()">中文</button>
-      <button type="button" class="language-button" mat-button (click)="useEnglish()">English</button>
-      <button type="button" class="language-button" mat-button (click)="useNotification()">状态管理测试</button>
-    </div><!--nav-collapse-->
-  </nav>
-</header>
+<nav class="nav-container">
+  <ul class="nav-list">
+    <li><img class="logo" src="./assets/imgs/angular.svg" alt="logo"></li>
+    <li routerLinkActive="active"><a routerLink="/homepage">{{'nav.home' | translate}}</a></li>
+    <li routerLinkActive="active"><a routerLink="/about">{{'nav.about' | translate}}</a></li>
+  </ul>
+  <div>
+    <button type="button" class="language-button" mat-button (click)="useChinese()">中文</button>
+    <button type="button" class="language-button" mat-button (click)="useEnglish()">English</button>
+  </div>
+</nav>
