--- a/App/src/app/layout/navbar/navbar.component.scss
+++ b/App/src/app/layout/navbar/navbar.component.scss
@@ -1,8 +1,44 @@
-.navbar{
-  margin: 0;
+.nav-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+  height: 50px;
+  padding: 0 50px;
+  background: white;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.08);
 }
 
-.language-button{
-  float: right;
-  margin-top: 8px;
+.nav-list {
+  display: flex;
+  flex-direction: row;
+  margin: 0;
+
+  .logo {
+    width: 40px;
+    height: 40px;
+  }
+
+  li {
+    box-sizing: border-box;
+    margin-right: 2em;
+    line-height: 50px;
+    padding: 0 5px;
+
+    &:last-child {
+      margin-right: 0;
+    }
+
+    a {
+      font-size: 18px;
+      color: #959da9;
+      text-decoration: none;
+    }
+  }
+
+  li.active a {
+    color: #00abff;
+    border-bottom: 2px solid #00abff;
+  }
 }
