refactor(home):refactor echarts demo

--- a/App/src/app/layout/navbar/navbar.component.html
+++ b/App/src/app/layout/navbar/navbar.component.html
@@ -2,6 +2,7 @@
   <ul class="nav-list">
     <li><img class="logo" src="./assets/imgs/angular.svg" alt="logo"></li>
     <li routerLinkActive="active"><a routerLink="/homepage">{{'nav.home' | translate}}</a></li>
+    <li routerLinkActive="active"><a routerLink="/echarts">echarts</a></li>
     <li routerLinkActive="active"><a routerLink="/about">{{'nav.about' | translate}}</a></li>
   </ul>
   <div>
