--- a/App/src/app/views/homepage/homepage.component.html
+++ b/App/src/app/views/homepage/homepage.component.html
@@ -1,15 +1,3 @@
-<div role="img" class="bg-img"></div>
-
-<div class="button-group">
-  <button type="button" class="btn btn-lg btn-default" (click)="postData()">default</button>
-  <button type="button" class="btn btn-lg btn-primary">primary</button>
-  <button type="button" class="btn btn-lg btn-success">success</button>
-  <button type="button" class="btn btn-lg btn-info">info</button>
-  <button type="button" class="btn btn-lg btn-warning">warning</button>
-  <button type="button" class="btn btn-lg btn-danger">danger</button>
-  <button type="button" class="btn btn-lg btn-link">link</button>
-</div>
-
 <mat-card class="example-card">
   <mat-card-header>
     <div mat-card-avatar class="example-header-image"></div>
@@ -25,20 +13,10 @@
     </p>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button>LIKE</button>
+    <button mat-button (click)="postData()">LIKE</button>
     <button mat-button>SHARE</button>
   </mat-card-actions>
 </mat-card>
-
-<form class="md-input">
-  <mat-form-field class="example-full-width">
-    <input matInput placeholder="Favorite food" value="Sushi">
-  </mat-form-field>
-
-  <mat-form-field class="example-full-width">
-    <textarea matInput placeholder="Leave a comment"></textarea>
-  </mat-form-field>
-</form>
 
 
 <!--ng-zorro-antd-->
@@ -59,14 +37,6 @@
   <i class="fa fa-american-sign-language-interpreting fa-5x" aria-hidden="true"></i>
 </div>
 <!--test fontawesome-->
-
-<!--test echarts-->
-<div id="main"></div>
-<!--test echarts-->
-
-<!--test jquery-->
-<div id="jq">jQuery works</div>
-<!--test jquery-->
 
 <!--test moment-->
 <div id="moment">moment.js works ,it's {{time}} now</div>
