--- a/App/src/app/layout/footer/footer.component.scss
+++ b/App/src/app/layout/footer/footer.component.scss
@@ -2,6 +2,9 @@ $footer-bgcolor: #F8F8F8;
 $footer-font-color-common: #00abff;
 
 .footer{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
   height: 60px;
   background: $footer-bgcolor;
   span{
