refactor(home):delete time card

--- a/App/src/app/views/homepage/homepage.component.html
+++ b/App/src/app/views/homepage/homepage.component.html
@@ -6,6 +6,7 @@
   </mat-card-header>
   <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
   <mat-card-content>
+    <p>{{ time }}</p>
     <p>
       The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
       A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
@@ -18,7 +19,3 @@
     <button mat-button (click)="toggleState()">Active animation</button>
   </mat-card-actions>
 </mat-card>
-
-<!--test moment-->
-<div id="moment">moment.js works ,it's {{time}} now</div>
-<!--test moment-->
