refactor(about): move table to component

--- a/App/src/app/views/about/about.component.html
+++ b/App/src/app/views/about/about.component.html
@@ -1,7 +1,7 @@
-<section>
-  <table id="table"></table>
-</section>
-
 <div class="sidebar">
   <app-sidebar [data]="menuData"></app-sidebar>
 </div>
+
+<section>
+  <router-outlet></router-outlet>
+</section>
