--- a/App/src/app/layout/footer/footer.component.scss
+++ b/App/src/app/layout/footer/footer.component.scss
@@ -6,6 +6,7 @@ $footer-font-color-common: #00abff;
   bottom: 0;
   width: 100%;
   height: 60px;
+  z-index: 999;
   background: $footer-bgcolor;
   span{
     color: $footer-font-color-common;
