--- a/App/src/app/layout/sidebar/sidebar.component.scss
+++ b/App/src/app/layout/sidebar/sidebar.component.scss
@@ -84,7 +84,7 @@ ul,li {
         min-width: 195px;
       }
     }
-    a:hover {
+    &:hover {
       cursor: pointer;
       background-color: #e9e9e9;
     }
